--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -200,16 +200,25 @@
         <nav class="collapse navbar-collapse" role="navigation">
           <ul class="nav navbar-nav">
             <li>
-              <a href="#">Category</a>
+              <a href="#">Workshops</a>
             </li>
             <li>
-              <a href="#">Category</a>
+              <a href="#">Locations</a>
             </li>
             <li>
-              <a href="#">Category</a>
+              <a href="#">Calendar</a>
             </li>
             <li>
-              <a href="#">Category</a>
+              <a href="#">Map</a>
+            </li>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Become a Hero</a>
+            </li>
+            <li>
+              <a href="#">Login</a>
             </li>
           </ul>
           <ul class="nav navbar-right navbar-nav">
@@ -230,7 +239,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <h1>Storystrap
+            <h1>The Hero Initiative
               <p class="lead"></p>
             </h1>
           </div>
@@ -238,8 +247,18 @@
             <div class="well well-lg">
               <div class="row">
                 <div class="col-sm-12">
-
-
+                 <!-- <ul>
+                    <h2>Sign up above to become a HERO today</h2>
+                    <li>Activities for social inclusion</li>
+                    <li>Intergenerational communications </li>
+                    <li> Communication between all socioeconomic groups ethnicities and genders </li>
+                    <li> Increase knowledge base for participants </li>
+                    <li> Increase cultural sensitivity (make it a habit to be caring) </li>
+                    <li> Doing something tangible </li>
+                    <li> Provide choices (options for people to choose career or entrepreneurial) </li>
+                    <li> Increase civic engagement</p>
+                  <ul>-->
+                  <p>“We live in a world in which we need to share responsibility. It's easy to say "It's not my child, not my community, not my world, not my problem." Then there are those who see the need and respond. I consider those people my heroes.” – Mr. Fred Rogers</p>
                 </div>
               </div>
             </div>
