--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -211,7 +211,7 @@
               <a href="/admin/locations">Locations</a>
             </li>
             <li>
-              <a href="#">Workshops</a>
+              <a href="/admin/workshops">Workshops</a>
             </li>
             <li>
               <a href="#">Workshop Dates</a>
