--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -219,7 +219,7 @@
             </li>
             <% if current_user %>
               <li>
-                <%= link_to('Logout', new_user_session_path, :method => :delete) %>
+                <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
               </li>
             <% else %>
               <li>
