statics and design

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,1 +1,28 @@
-<h1>Admin</h1>
+<div class="row">
+  <br>
+  <div class="col-md-2 col-sm-3 text-center">
+    <%= image_tag("bvsjlogo.jpg", height: "50%", width: "50%") %>
+
+  </div>
+  <div class="col-md-10 col-sm-9">
+    <h3>Admin</h3>
+    <div class="row">
+      <div class="col-xs-9">
+        <p>This is the main administrator page. From here, you can create, edit and delete:<p>
+        <ul>
+          <li>Users</li>
+          <li>Regions</li>
+          <li>Locations</li>
+          <li>Workshops</li>
+          <li>Workshop Dates</li>
+          <li>Newsletters</li>
+        </ul>
+        <p>Just click the links on the top of the page to work with these.</p>
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+    <br><br>
+  </div>
+</div>
+<hr>
