--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,16 @@
+<div class="row center">
+  <div id="mycarousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="item active">
+          <%= image_tag("bvsjphoto.jpg", width: "80%", class: "center") %>
+          <div class="carousel-caption">
+            <h1>Welcome to the HERO Initiative</h1>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+
 <div class="row">
   <br>
   <div class="col-md-2 col-sm-3 text-center">
@@ -5,10 +18,20 @@
 
   </div>
   <div class="col-md-10 col-sm-9">
-    <h3>A project of Black Veterans for Social Justice</h3>
+    <h3>Mission</h3>
     <div class="row">
       <div class="col-xs-9">
-        <h4><span class="label label-default"><a class="plain" href="http://www.bvsj.org">BVSJ.org</a></span></h4>
+        <p>The most precious natural resource next to water, air and the sun is the Human Resource. Sharing the human resource and allowing it to be accessed through the H.E.R.O Initiative will achieve these goals:<p>
+        <ul>
+          <li>Activities for social inclusion</li>
+          <li>Intergenerational communications</li>
+          <li>Communication between all socioeconomic groups, ethnicities and genders</li>
+          <li>Increase knowledge base for participants </li>
+          <li>Increase cultural sensitivity (make it a habit to be caring)</li>
+          <li>Doing something tangible</li>
+          <li>Provide choices (options for people to choose career or entrepreneurial)</li>
+          <li>Increase civic engagement</li>
+        </ul>
       </div>
       <div class="col-xs-3">
       </div>
@@ -17,4 +40,47 @@
   </div>
 </div>
 <hr>
+
+<div class="row">
+  <br>
+  <div class="col-md-2 col-sm-3 text-center">
+    <%= image_tag("bvsjlogo.jpg", height: "50%", width: "50%") %>
+
+  </div>
+  <div class="col-md-10 col-sm-9">
+    <h3>Description</h3>
+    <div class="row">
+      <div class="col-xs-9">
+        <p>“We live in a world in which we need to share responsibility. It's easy to say "It's not my child, not my community, not my world, not my problem." Then there are those who see the need and respond. I consider those people my heroes.” – Mr. Fred Rogers</p>
+
+        <p>For 35 years, Black Veterans for Social Justice has been serving Veterans, their families and the NYC community. In the spirit of furthering that mission, with our resources along with reaching out to community partners and elected officials, on November 4th 2014 we introduce the H.E.R.O (Human Educational Resource Outlet) Initiative. </p>
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+    <br><br>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <br>
+  <div class="col-md-2 col-sm-3 text-center">
+    <%= image_tag("bvsjlogo.jpg", height: "50%", width: "50%") %>
+
+  </div>
+  <div class="col-md-10 col-sm-9">
+    <h3>Contact</h3>
+    <div class="row">
+      <div class="col-xs-9">
+        <p>For More Information about the H.E.R.O Initiative and/or if your institution would like to be a community partner please contact: Jelani Mashariki – jmashariki@bvsj.org or Marlon Rice – mrice@bvsj.org</p>
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+    <br><br>
+  </div>
+</div>
+<hr>
+
 
