--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -220,6 +220,11 @@
             <li>
               <a href="#">Newsletter</a>
             </li>
+            <% if current_user and current_user.role == "admin" %>
+              <li>
+                <%= link_to('Admin', admin_root_path) %>
+              </li>
+            <% end %>
             <% if current_user %>
               <li>
                 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
