Users can now add workshops and dates.

--- a/app/views/admin/workshop_dates/index.html.erb
+++ b/app/views/admin/workshop_dates/index.html.erb
@@ -9,6 +9,7 @@
             <th>Region</th>
             <th>Start Time</th>
             <th>End Time</th>
+            <th>Status</th>
             <th>Actions</th>
         </tr>
     </thead>
