--- a/app/views/workshops/_form.html.erb
+++ b/app/views/workshops/_form.html.erb
@@ -1,11 +1,8 @@
-<%= simple_form_for [:admin, @workshop_date] do |f| %>
+<%= simple_form_for [@workshop] do |f| %>
   <%= f.error :base %>
-      <%= f.input :workshop_id, as: :select, collection: @workshops %>
-      <%= f.input :status, as: :select, collection: ["pending", "approved"] %>
+      <%= f.input :location_id, as: :select, collection: @locations %>
       <%= f.input :name, :input_html => {:size => 40} %>
       <%= f.input :description, :input_html => { 'rows' => 5, 'cols' => 40 } %>
-      <%= f.input :start_time %>
-      <%= f.input :end_time %>
       <%= f.input :user_id, :as => :hidden, :input_html => { :value => current_user.id } %>
 
       <div class="button-row-bottom">
