--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [:admin, @user] do |f| %>
   <%= f.error :base %>
-      <%= f.input :role, as: :select, collection: ["user", "admin"] %>
+      <%= f.input :role, as: :select, collection: ["user", "regional_admin", "admin"] %>
       <%= f.input :region_id, as: :select, collection: @regions %>
       <%= f.input :email, :input_html => {:size => 40} %>
       <%= f.input :password, :input_html => {:size => 40,} %>
