--- a/app/views/admin/workshop_dates/_workshop_date.html.erb
+++ b/app/views/admin/workshop_dates/_workshop_date.html.erb
@@ -5,6 +5,7 @@
     <td><%= workshop_date.workshop.location.name %></td>
     <td><%= workshop_date.start_time %></td>
     <td><%= workshop_date.end_time %></td>
+    <th><%= workshop_date.status %></td>
     <td>
         <%= link_to "Edit", edit_admin_workshop_date_path(workshop_date), class: 'btn btn-xs btn-primary' %>
         <%= link_to "Destroy", admin_workshop_date_path(workshop_date), class: 'btn btn-xs btn-danger', method: :delete, data: {confirm: "Are you sure?"} %>
