--- a/app/views/admin/workshops/index.html.erb
+++ b/app/views/admin/workshops/index.html.erb
@@ -1,6 +1,11 @@
 <h1>Locations</h1>
 <a href="/admin/workshops/new" class="btn btn-primary">Create Workshop</a>
-
+<br>
+<% unless @pending_only %>
+  <a href="/admin/workshops?status=pending" class="btn btn-primary">Show Pending Workshops</a>
+<% else %>
+  <a href="/admin/workshops" class="btn btn-primary">Show All Workshops</a>
+<% end %>
 <table class="table table-bordered table-hover table-striped table-condensed">
     <thead>
         <tr>
@@ -8,6 +13,7 @@
             <th>Description</th>
             <th>Location</th>
             <th>Region</th>
+            <th>Status</th>
             <th>Actions</th>
         </tr>
     </thead>
