--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -227,6 +227,9 @@
             <% end %>
             <% if current_user %>
               <li>
+                <a href="/profile/<%= current_user.id %>">Profile</a>
+              </li>
+              <li>
                 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
               </li>
             <% else %>
