redirect on login

--- a/app/views/profiles/_workshop_date.html.erb
+++ b/app/views/profiles/_workshop_date.html.erb
@@ -1,5 +1,5 @@
 <fieldset>
-<legend><a href="/workshops/<%= workshop_date.workshop.id %>"><%= workshop_date.workshop.name %></a></legend>
+<legend><a href="/workshops/<%= workshop_date.workshop.id %>"><%= workshop_date.workshop.name %> - click to view</a></legend>
 <p><%= workshop_date.name %><p>
 <p><%= workshop_date.description %><p>
 <p><%= workshop_date.start_time %><p>
