some design tweaks

--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -8,7 +8,7 @@
     <h3><%= @workshop.name%></h3>
     <div class="row">
       <div class="col-xs-9">
-        <h4><span class="label label-default"><%= @workshop.description %></span></h4>
+        <h4><%= @workshop.description %></h4>
       </div>
       <div class="col-xs-3">
       </div>
@@ -29,9 +29,10 @@
       <h3><%= workshop_date.name%></h3>
       <div class="row">
         <div class="col-xs-9">
-          <h4><span class="label label-default"><%= workshop_date.description %></span></h4>
-          <h4><span class="label label-default"><%= workshop_date.start_time %></span></h4>
-          <h4><span class="label label-default"><%= workshop_date.end_time %></span></h4>
+          <h4><%= workshop_date.description %></h4>
+          <h4><span class="label label-default">Status: <%= workshop_date.status %></span></h4>
+          <h4><span class="label label-default">From: <%= workshop_date.start_time %></span></h4>
+          <h4><span class="label label-default">To: <%= workshop_date.end_time %></span></h4>
         </div>
         <div class="col-xs-3">
         </div>
