--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,18 @@
-<h2>Welcome <%= @user.email %></h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Welcome <%= @user.email %></h2>
+    </div>
+
+    <div class="col-md-3">
+
+    </div>
+
+    <div class="col-md-3">
+      <h2>HERO Points: 10</h2>
+    </div>
+  </div>
+</div>
 
 <div class="accordion" id="accordion2">
 
@@ -27,7 +41,11 @@
     <div id="collapseFour" class="accordion-body collapse">
       <div class="accordion-inner">
         <% @workshops.each do |workshop| %>
-          <p><a href="/workshops/<%= workshop.id %>"><%= workshop.name %></a></p>
+          <% if workshop.status == "approved" %>
+            <p><a href="/workshops/<%= workshop.id %>"><%= workshop.name %></a></p>
+          <% else %>
+            <p><%= workshop.name %> - pending approval</p>
+          <% end %>
         <% end %>
 
         <a href="/workshop_dates/new" class="btn btn-primary">Add Dates to your Workshops</a>
