some design tweaks

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -22,7 +22,7 @@
 
 <h3>Workshops</h3>
 
-<% @location.workshops.each do |workshop| %>
+<% @workshops.each do |workshop| %>
 
   <div class="row">
     <br>
