--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -287,7 +287,7 @@
             <% end %>
 
           </ul>
-          <ul class="nav navbar-right navbar-nav">
+<!--          <ul class="nav navbar-right navbar-nav">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
               <ul class="dropdown-menu" style="padding:12px;">
@@ -296,7 +296,7 @@
                 </form>
               </ul>
             </li>
-          </ul>
+          </ul>-->
         </nav>
       </div>
     </header>
