about and become_a_hero pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -266,7 +266,7 @@
               <%= link_to('About', about_path) %>
             </li>
             <li>
-              <a href="#">Become a Hero</a>
+              <a href="/become_a_hero">Become a Hero</a>
             </li>
             <% if current_user and current_user.role == "admin" %>
               <li>
