--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,100 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="row">
+  <br>
+  <div class="col-md-2 col-sm-3 text-center">
+    <%= image_tag("bvsjlogo.jpg", height: "50%", width: "50%") %>
+
+  </div>
+  <div class="col-md-10 col-sm-9">
+    <h3>H.E.R.O (Human Educational Resource Outlet)</h3>
+    <div class="row">
+      <div class="col-xs-9">
+         <span>"We live in a world in which we need to share responsibility. It's easy to say "It's not my child, not my community, not my world, not my problem." Then there are those who see the need and respond. I consider those people my heroes." – Mr. Fred Rogers</span>
+
+         <p>For 35 years, Black Veterans for Social Justice has been serving Veterans, their families and the NYC community. In the spirit of furthering that mission, with our resources along with reaching out to community partners and elected officials, on November 4th 2014 we introduce the H.E.R.O (Human Educational Resource Outlet) Initiative. The most precious natural resource next to water, air and the sun is the Human Resource.</p>
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+    <br><br>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <br>
+  <div class="col-md-2 col-sm-3 text-center">
+    <%= image_tag("bvsjlogo.jpg", height: "50%", width: "50%") %>
+
+  </div>
+  <div class="col-md-10 col-sm-9">
+    <h3>Our Goals</h3>
+    <div class="row">
+      <div class="col-xs-9">
+        <p> Sharing the human resource and allowing it to be accessed through the H.E.R.O Initiative will achieve these goals:</p>
+        <ul>
+          <li> Activities for social inclusion</li>
+          <li> Intergenerational communications</li>
+          <li> Communication between all socioeconomic groups, ethnicities and genders</li>
+          <li> Increase knowledge base for participants </li>
+          <li> Increase cultural sensitivity (make it a habit to be caring)</li>
+          <li> Doing something tangible</li>
+          <li> Provide choices (options for people to choose career or entrepreneurial)</li>
+          <li> Increase civic engagement</li>
+        </ul>
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+    <br><br>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <br>
+  <div class="col-md-2 col-sm-3 text-center">
+    <%= image_tag("bvsjlogo.jpg", height: "50%", width: "50%") %>
+
+  </div>
+  <div class="col-md-10 col-sm-9">
+    <h3>Become a HERO</h3>
+    <div class="row">
+      <div class="col-xs-9">
+          <p>Is there a skill or an interest that you would like to learn?</p>
+          <p>Do you have a skill or a particular interest that you would like to share?</p>
+          <p>Are you willing to conduct (2) or (3) 1.5hr workshops every 6 months sharing that skill?</p>
+          <p>Everyone is a H.E.R.O.!!!</p>
+          <p>Currently we have 6 different locations in the Clinton Hill, Prospect Heights and Bedford Stuyvesant areas within our network to host H.E.R.O workshops</p>
+
+          <a href="/workshops/new" class="btn btn-primary">Start a Workshop</a>
+
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+    <br><br>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <br>
+  <div class="col-md-2 col-sm-3 text-center">
+    <%= image_tag("bvsjlogo.jpg", height: "50%", width: "50%") %>
+
+  </div>
+  <div class="col-md-10 col-sm-9">
+    <h3>Contact Us</h3>
+    <div class="row">
+      <div class="col-xs-9">
+        <p>For More Information about the H.E.R.O Initiative and/or if your institution would like to be a community partner please contact:</p>
+        <p>Jelani Mashariki – jmashariki@bvsj.org</p>
+        <p>Marlon Rice – mrice@bvsj.org</p>
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+    <br><br>
+  </div>
+</div>
+<hr>
