--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -185,6 +185,12 @@
     a.plain {
       color: white;
     }
+
+    .center-alert {
+      margin-left: 40%;
+      margin-right: 40%;
+      width: 20%;
+    }
   </style>
 
 </head>
@@ -293,8 +299,18 @@
 
           <div class="panel">
             <div class="panel-body">
-              <%= flash[:alert] %>
-              <%= flash[:notice] %>
+              <% if flash[:alert] %>
+                <div class=" btn btn-danger center-alert">
+                  <%= flash[:alert] %>
+                </div>
+              <% end %>
+
+              <% if flash[:notice] %>
+                <div class=" btn btn-success center-alert">
+                  <%= flash[:notice] %>
+                </div>
+              <% end %>
+
               <%= yield %>
             </div>
           </div>
